# physics-sim

./: CMakeLists.txt
examples/: billiard.cpp  galton_board.cpp  random.cpp  rigid.cpp  rigid2.cpp  small.cpp
source/: circle.hpp  circle_collider.hpp  colliders.cpp  colliders.hpp  collision_detectors.hpp  forces.cpp  forces.hpp  integrators.cpp  integrators.hpp  main.cpp  physics.hpp  physics_item.cpp  physics_item.hpp  polygon_collider.cpp  simulation.hpp  simulation_object.hpp  util.hpp  visualizer.cpp  visualizer.hpp  window.cpp  window.hpp
